# assertions-mate

./: .gitignore  README.md  mkdocs.yaml  pyproject.toml
.github/workflows/: docs.yaml  package.yaml
docs/: index.md  jsonschema.ipynb  pygeofilter.ipynb  regopy.ipynb
docs/diagrams/src/: class.puml  flow.puml  overall.puml  sequence.puml
schemas/: hints.yaml
src/assertions_mate/: __init__.py  cli.py  cql2_validator.py  error_models.py  jsonschema_validator.py  rego_validator.py
tests/artifacts/: request_body.yaml
