[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "assertions-mate"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "Apache-2.0"
keywords = []
authors = [
  { name = "Terradue srl", email = "info@terradue.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "jsonschema",
  "regopy==0.4.6",
  "pygeofilter",
  "pygeofilter[backend-native]",
  "pystac-client",
  "shapely",
  "pydantic",
  "loguru",
  "click",
  "cwl-utils",
  "cwl2ogc>=0.10.0"
]

[project.urls]
Documentation = "https://github.com/Terradue/assertions-mate#README.md"
Issues = "https://github.com/Terradue/assertions-mate/issues"
Source = "https://github.com/Terradue/assertions-mate"

[project.scripts]
assertions-mate = "assertions_mate.cli:main"

[tool.hatch.version]
path = "src/assertions_mate/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/assertions_mate tests}"

[tool.coverage.run]
source_pkgs = ["assertions_mate", "tests"]
branch = true
parallel = true
omit = [
  "src/assertions_mate/__about__.py",
]

[tool.coverage.paths]
assertions_mate = ["src/assertions_mate", "*./src/assertions_mate"]
tests = ["tests", "*/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.hatch.envs.default]
skip-install = false
dependencies = [
  "jsonschema",
  "regopy",
  "pygeofilter",
  "pygeofilter[backend-native]",
  "pystac-client",
  "shapely",
  "pydantic"
]

[tool.hatch.envs.prod]
path = "/app/envs/appuser"
